# TRIE-AUTOCOMPLETE

./: .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  main.cpp  server.js  trie.cpp  trie.h  words.txt
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: AddWord.jsx  AutoComplete.jsx  Loading.jsx
